<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_top_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/row_section_headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_header_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_header_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/weight"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_header_what"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/vhat"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_header_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/total_oz"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_holdings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/view_bottom_divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/layout_section_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/font_14" />

            <TextView
                android:id="@+id/tv_section_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/edittext_bg"
                android:padding="6dp"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/font_12"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>