<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginplus1"
        android:orientation="vertical"
        android:padding="@dimen/marginplus1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginplus1"
            android:orientation="horizontal"
            android:padding="@dimen/marginplus1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/item_type"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_item_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/edittext_bg"
                android:hint="@string/item_type"
                android:inputType="textCapWords"
                android:padding="8dp"
                android:textColor="@color/textview_text_color"
                android:textSize="@dimen/font_14" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/tv_manual_total_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginplus2"
            android:layout_marginTop="8dp"
            android:text="@string/manual_total_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/row_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginplus1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/marginplus1"
                    android:layout_margin="@dimen/marginplus1"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:orientation="horizontal"
                    android:text="@string/no"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text=":"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_no"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/marginplus6"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="right"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right|center"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:padding="5dp"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginplus1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_total_label"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginplus1"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:paddingHorizontal="@dimen/marginplus1"
                    android:orientation="horizontal"
                    android:text="@string/weight"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text=":"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_wight"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/marginplus6"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="right"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right|center"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:padding="5dp"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row_what"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginplus1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginplus1"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:paddingHorizontal="@dimen/marginplus1"
                    android:orientation="horizontal"
                    android:text="@string/vhat"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text=":"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_what"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/marginplus6"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="right"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right|center"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginplus1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/marginplus1"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:paddingHorizontal="@dimen/marginplus1"
                    android:orientation="horizontal"
                    android:text="@string/total_oz"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:text=":"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_total"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/marginplus6"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="right"
                    android:layout_marginHorizontal="@dimen/marginplus1"
                    android:background="@drawable/edittext_bg"
                    android:gravity="right|center"
                    android:inputType="number"
                    android:enabled="false"
                    android:padding="5dp"
                    android:textColor="@color/textview_text_color"
                    android:textSize="@dimen/font_14" />


            </LinearLayout>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginplus1"
            android:padding="@dimen/marginplus2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button_border"
                android:minHeight="30dp"
                android:paddingHorizontal="@dimen/marginplus3"
                android:layout_marginHorizontal="@dimen/marginplus1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button_border"
                android:minHeight="30dp"
                android:paddingHorizontal="@dimen/marginplus3"
                android:layout_marginHorizontal="@dimen/marginplus1"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />


            <Button
                android:id="@+id/btn_add"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button_border"
                android:minHeight="30dp"
                android:paddingHorizontal="@dimen/marginplus3"
                android:layout_marginHorizontal="@dimen/marginplus1"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>


    </LinearLayout>

    </androidx.cardview.widget.CardView>


    </LinearLayout>

</ScrollView>
